k8s/orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-rabbitmq
  namespace: retail-app
spec:
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: amqp
      name: amqp
    - port: 15672
      targetPort: http
      name: http
  selector:
    app: orders-rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-rabbitmq
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-rabbitmq
  template:
    metadata:
      labels:
        app: orders-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: "public.ecr.aws/docker/library/rabbitmq:3-management"
          ports:
            - name: amqp
              containerPort: 5672
            - name: http
              containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: retail-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: retail-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      serviceAccountName: orders
      securityContext:
        fsGroup: 1000
      containers:
        - name: orders
          securityContext:
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "public.ecr.aws/aws-containers/retail-store-sample-orders:1.6.2"
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 256m
              memory: 512Mi
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
